--- a/tutorial/templates/flatpages/contact.html
+++ b/tutorial/templates/flatpages/contact.html
@@ -4,8 +4,21 @@
 <title>{{ flatpage.title }}</title>
 </head>
 <body>
+
+    {% extends 'flatpages/about.html' %}
+    
+    {% block navigation %}{% endblock navigation %}
+
+    {% block title %}
     <h2>{{ flatpage.title }}</h2>
+    {% endblock title %}
+
     <hr>
+
+    {% block content %}
     {{ flatpage.content }}
+    {% endblock content %}
+
+
 </body>
 </html>
