--- a/tutorial/templates/flatpages/production.html
+++ b/tutorial/templates/flatpages/production.html
@@ -4,12 +4,22 @@
 <title>{{ flatpage.title }}</title>
 </head>
 <body>
+    
+    {% block navigation %} <a href="/about/">about</a> <a href="/contacts/">contacts</a> <a href="/production/">production</a> {% endblock navigation %}
+
+    {% block title %}
     <h2>{{ flatpage.title }}</h2>
+    {% endblock title %}
+
+    <hr>
+
     <h3>Наша продукция:</h3>
     <i>{{ flatpage.content }}</i>
     <hr>
-    <p>и ещё</p>
+    <p>и ещё раз</p>
     <hr>
-    <i>{{ flatpage.content }}</i>
+    <i>{{ flatpage.content }}</i><br>
+   
 </body>
 </html>
+
