--- a/tutorial/templates/flatpages/about.html
+++ b/tutorial/templates/flatpages/about.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 
+    {% extends 'flatpages/default.html' %}
+
     {% block navigation %} <a href="/about/">about</a> <a href="/contacts/">contacts</a> <a href="/production/">production</a> {% endblock navigation %}
 
     {% block title %}
