--- a/tutorial/templates/flatpages/default.html
+++ b/tutorial/templates/flatpages/default.html
@@ -39,6 +39,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/contacts/">Contact</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/production/">Production</a>
+          </li>
         </ul>
       </div>
     </div>
